remove chache for fixing .gitignore
