# docs/v1/swagger.json
@@ -178,6 +178,11 @@
         },
         "/api/v1/users/whoami": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get logged-in user data.",
                 "consumes": [
                     "*/*"
